--- a/public/register.html
+++ b/public/register.html
@@ -62,14 +62,53 @@
                             <div class="form-bottom">
 			                    <form role="form" onsubmit="return false" class="login-form">
                                     <div class="form-group">
-                                        <label class="sr-only" for="form-username">Email ID</label>
-                                        <input type="text" name="form-username" placeholder="Email ID" class="form-username form-control" id="form-username">
+                                        <label for="form-username">Branch</label>
+                                        <select id="branch" class="form-control">
+                                            <option selected disabled>Select Branch</option>
+                                            <option>Electrical</option>
+                                            <option>Mechanical</option>
+                                            <option>Civil</option>
+                                        </select>
                                     </div>
                                     <div class="form-group">
-                                        <label class="sr-only" for="form-password">Password</label>
-                                        <input type="password" name="form-password" placeholder="Password" class="form-password form-control" id="form-password">
+                                        <label for="form-username">Name</label>
+                                        <select class="form-control" id="name">
+                                            <option selected disabled>Select Name</option>
+                                        </select>
                                     </div>
-                                    <button id="register" class="btn">Sign in!</button>
+                                    <div class="form-group">
+                                        <label for="form-username">Email</label>
+                                        <input type="text" name="form-username" class="form-username form-control" id="form-email">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Password</label>
+                                        <input type="password" name="form-username" class="form-username form-control" id="form-password">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Confirm Password</label>
+                                        <input type="password" name="form-username" class="form-username form-control" id="form-password1">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Alternate Name</label>
+                                        <input type="text" name="form-username" class="form-username form-control" id="form-altName">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Contact Number</label>
+                                        <input type="text" name="form-username" class="form-username form-control" id="form-cont">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Current Address</label>
+                                        <input type="text" name="form-username" class="form-username form-control" id="form-address">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-username">Current Location</label>
+                                        <input type="text" name="form-username" class="form-username form-control" id="form-location">
+                                    </div>
+                                    <div class="form-group">
+                                        <label for="form-intro">Introduction</label>
+                                        <textarea id="form-intro" class="form-control custom-control" rows="6"></textarea>
+                                    </div>
+                                    <button id="register" class="btn">Register</button>
                                 </form>
 		                    </div>
                         </div>
