--- a/public/profile.html
+++ b/public/profile.html
@@ -65,70 +65,13 @@
                         <div class="col-sm-6 col-sm-offset-3 form-box">
                         	<div class="form-top">
                         		<div class="form-top-left">
-                        			<h3>Edit Profile</h3>
-                            		<p>You have to be approved by admin to view the home page. If you have not updated your profile, please update it soon here as admin will approve only if your profile is updated.</p>
+                        			<h3>Profile</h3>
                         		</div>
                         		<div class="form-top-right">
                         			<i class="fa fa-lock"></i>
                         		</div>
                             </div>
-                            <div class="form-bottom">
-			                    <form role="form" onsubmit="return false" class="login-form">
-                                    <div class="form-group" id="branchForm">
-                                        <label for="form-username">Branch</label>
-                                        <select id="branch" class="form-control">
-                                        </select>
-                                    </div>
-                                    <div class="form-group" id="nameForm">
-                                        <label for="form-username">Name</label>
-                                        <select class="form-control" id="name">
-                                            <option selected disabled>Select Name</option>
-                                        </select>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-username">Alternate Name</label>
-                                        <input type="text" name="form-username" class="form-username form-control" id="form-altName">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-username">Email</label>
-                                        <input type="text" name="form-username" class="form-username form-control" id="form-email">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-username">Contact Number</label>
-                                        <input type="text" name="form-username" class="form-username form-control" id="form-cont">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-username">Current Address</label>
-                                        <input type="text" name="form-username" class="form-username form-control" id="form-address">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-username">Current Location</label>
-                                        <input type="text" name="form-username" class="form-username form-control" id="form-location">
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="form-intro">Introduction</label>
-                                        <textarea id="form-intro" class="form-control custom-control" rows="6"></textarea>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="uploadOld">Campus Face</label>
-                                        <input type="file" name="oldFace" id="oldFace"/>
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="uploadNew">New Face</label>
-                                        <input type="file" name="newFace" id="newFace" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="uploadFam1">Family Pic 1</label>
-                                        <input type="file" name="familyPic1" id="familyPic1" />
-                                    </div>
-                                    <div class="form-group">
-                                        <label for="uploadFam2">Family Pic 2</label>
-                                        <input type="file" name="familyPic2" id="familyPic1" />
-                                    </div>
-                                    <button id="register" class="btn">SAVE AND SIGN OUT</button>
-                                    <button id="signout" style="margin-top:0.5cm" class="btn">DON'T SAVE AND SIGN OUT</button>
-                                </form>
-		                    </div>
+                            <div id="profileContents" class="form-bottom"></div>
                         </div>
                     </div>
                     <div class="row">Time remaining</div>
